@@ -29,7 +29,10 @@ CHANGES - Current Version:
 - Modified mitab_capi.cpp to correctly produce "point" style arcs from
   mitab_c_set_arc().  It now sets a point geometry ensuring that the
   TABArc::ValidateMapInfoType() method will succeed.  As per DMSG Bug 644. NFW
-  
+
+- Fixed some TABView issues: 
+  - Support "select * ..." syntax
+  - Accept source table names with or without the .tab extension
 
 
 Version 1.1.3 - (2001-11-02)
@@ -371,5 +374,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.72 2001-12-17 16:15:28 warmerda Exp $
+$Id: HISTORY.TXT,v 1.73 2002-01-10 04:53:34 daniel Exp $
 ------------
